--- a/doc/coreutils_progress.org
+++ b/doc/coreutils_progress.org
@@ -1,4 +1,4 @@
-* CoreUtils commands implementation [0%]
+* CoreUtils commands implementation [2%]
 
 ** TODO comm
 ** TODO timeout
@@ -49,7 +49,7 @@
 ** TODO nproc
 ** TODO mkfifo
 ** TODO sha224sum
-** TODO yes
+** DONE yes
 ** TODO arch
 ** TODO tail
 ** TODO wc
@@ -77,7 +77,7 @@
 ** TODO echo
 ** TODO chgrp
 ** TODO readlink
-** TODO df
+** IN_PROGRESS df
 ** TODO cp
 ** TODO dir
 ** TODO pwd
@@ -89,12 +89,12 @@
 ** TODO ls
 ** TODO sleep
 ** TODO rmdir
-** TODO true
+** DONE true
 ** TODO rm
 ** TODO chmod
 ** TODO chown
 ** TODO mv
-** TODO false
+** DONE false
 ** TODO cat
 ** TODO vdir
 ** TODO uname
